--- a/Java/Haldwani-SujataMa'am/_07_Serverlets&JSP/bca_servlets/src/main/webapp/index.html
+++ b/Java/Haldwani-SujataMa'am/_07_Serverlets&JSP/bca_servlets/src/main/webapp/index.html
@@ -14,7 +14,11 @@
     </form>
 
     <p>
-        
+        <form action="Add" method="get, post">
+            Enter 1st number: <input type="text" name="t1" ><br>
+            Enter 2nd number: <input type="text" name="t2" ><br>
+            <input type="submit" value="Add">
+        </form>
     </p>
 </body>
 </html>
