--- a/unit05/ajax/update.html
+++ b/unit05/ajax/update.html
@@ -10,18 +10,18 @@
 
     <button onclick="updateTextFile()">Update Text File</button>
 
-    <p id="demo"></p>
+    <!-- <p id="demo"></p> -->
 
     <script>
         function updateTextFile() {
                 var xhttp = new XMLHttpRequest();
-                xhttp.onreadystatechange = function () {
-                    if (this.readyState == 4 && this.status == 200) {
-                        // process the response from the server
-                        document.getElementById("demo").innerHTML = this.responseText;
+                // xhttp.onreadystatechange = function () {
+                //     if (this.readyState == 4 && this.status == 200) {
+                //         // process the response from the server
+                //         document.getElementById("demo").innerHTML = this.responseText;
 
-                    }
-                };
+                //     }
+                // };
                 // xhttp.open("POST", "updateTextFile.php", true);
                 // xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
                 // xhttp.send("text=" + encodeURIComponent("newText"));
